--- a/index.css
+++ b/index.css
@@ -1,10 +1,34 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
 *{
     box-sizing: border-box;
     margin: 0px;
     font-family: "Poppins", sans-serif;
+    /* background-color: rgb(241 245 249); */
+}
+body{
+    background-color: rgb(241 245 249);
 }
 
-.logo{
+
+/* .error{
+    animation: round 0.2s linear;
+}
+@keyframes round {
+    0%{
+        transform: translateX(25%);
+    }
+    100%{
+        transform: translateX(50%);
+    }
+} */
+
+/* .logo{
     width: 100px;
 }
 
@@ -20,7 +44,6 @@
     align-items: center;
     height: 80px;
     width: 100%;
-    /* border: 1px solid black; */
 }
 .nav-items > ul{
     display: flex;
@@ -54,74 +77,15 @@
 .search{
     padding: 30px 10px;
 }
+ */
 
-
-
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgb(238, 238, 238);
-}
-
-.res-card{
-    width: 270px;
-    height: 360px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    font-family: "Poppins", sans-serif;
-    /* border: 1px solid black; */
-}
-.res-card > :nth-child(2){
-    padding: 10px 12px 5px 12px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-size: 20px;
-    font-weight: 700;
-    color: rgb(61, 61, 61);
-}
-.res-card > :nth-child(3){
-    padding: 0px 12px 10px 12px;
-    font-size: 16px;
-    font-weight: 700;
-    color: rgb(61, 61, 61);
-}
-.res-card > :nth-child(4), .res-card > :nth-child(5){
-    padding: 2px 12px;
-    font-size: 14px;
-    color: gray;
-}
-
-.header-btn, .card-data{
-    text-decoration: none;
-}
-
-
-.res-card:hover{
-    -ms-transform: scale(0.9); /* IE 9 */
-  -webkit-transform: scale(0.9); /* Safari 3-8 */
-  transform: scale(0.9);
-}
-.res-logo{
-    width: 270px;
-    height: 190px;
-    object-fit: cover;
-    border-radius: 15px;
-}
-
-.res-card > h4{
-    margin: 3px;
-}
-
-.filter{
+ /* .filter{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     background-color: rgb(238, 238, 238);
+    padding: 15px;
 }
 .filter-btn{
     margin: 8px;
@@ -157,11 +121,71 @@
 
 
 
-.shimmer-container{
+.res-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* background-color: rgb(208, 211, 228); */
+    background-color: rgb(238, 238, 238);
+}
+
+.res-card{
+    width: 270px;
+    height: 360px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    font-family: "Poppins", sans-serif;
+}
+.res-card > :nth-child(2){
+    padding: 10px 12px 5px 12px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(61, 61, 61);
+}
+.res-card > :nth-child(3){
+    padding: 0px 12px 10px 12px;
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(61, 61, 61);
+}
+.res-card > :nth-child(4), .res-card > :nth-child(5){
+    padding: 2px 12px;
+    font-size: 14px;
+    color: gray;
+}
+
+.header-btn, .card-data{
+    text-decoration: none;
+}
+
+
+.res-card:hover{
+    -ms-transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+}
+.res-logo{
+    width: 270px;
+    height: 190px;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.res-card > h4{
+    margin: 3px;
+} */
+
+
+
+
+
+/* .shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .shimmer-btn{
     height: 40px;
@@ -176,7 +200,6 @@
     margin: 10px;
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(203, 209, 250); */
 }
 .shimmer-card .box{
     width: 270px;
@@ -195,15 +218,13 @@
     height: 15px;
     background-color: rgb(231, 234, 247);
     margin: 0px 10px;
-}
+} */
 
 
 
-.menu{
+/* .menu{
     font-family: "Poppins", sans-serif;
     width: 100%;
-    /* height: 2000; */
-    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -290,6 +311,10 @@ li > .item-data{
 .item-data > :nth-child(1){
     font-size: 20px;
     font-weight: 600;
+    width: 540px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .item-data > :nth-child(2){
     font-size: 15px;
@@ -323,4 +348,4 @@ li > .item > .menu-img {
     width: 156px;
     object-fit: cover;
     border-radius: 10px;
-}
+} */
