--- a/index.css
+++ b/index.css
@@ -11,9 +11,9 @@
     font-family: "Poppins", sans-serif;
     /* background-color: rgb(241 245 249); */
 }
-body{
+/* body{
     background-color: rgb(241 245 249);
-}
+} */
 
 
 /* .error{
